[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.4.2

--- a/packages/sdk/docs/3.md
+++ b/packages/sdk/docs/3.md
@@ -9,7 +9,7 @@
 | conversationId | the conversation id | `string` | `undefined` |  |
 | isMixin | judgement whether or not in mixin or reborn app | `boolean` | - |  |
 | token | get mixin access-token | `string` | `undefined` |  |
-| version | the app version | `string` | `unknown` |  |
+| version | the app version | `string` | `undefined` |  |
 
 ### code
 the code which used to get access-token
