--- a/packages/sdk/docs/3.zh-CN.md
+++ b/packages/sdk/docs/3.zh-CN.md
@@ -9,7 +9,7 @@
 | conversationId | 获取 conversation id | `string` | `undefined` |  |
 | isMixin | 判断是否在 mixin 或者 reborn App 内 | `boolean` | - |  |
 | token | 获取 access-token | `string` | `undefined` |  |
-| version | App的版本号 | `string` | `unknown` |  |
+| version | App的版本号 | `string` | `undefined` |  |
 
 ### code
 code 通常用于获取 access-token
