--- a/packages/sdk/docs/3.md
+++ b/packages/sdk/docs/3.md
@@ -71,7 +71,7 @@ the app version
 | logout | do logout | `function(reload = true)` | - |  |
 | payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): { url?: string, params: PARAMS_PAYMENT } \| undefined` | - |  |
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.30.0` |
-| popup | evoke user or bot's popup by generate scheme-url | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
+| popup | evoke user or bot's popup by generate scheme-url | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - | `0.29.0(bot)` |
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
 | requestToken | request access-token by code  | `function(params?: ReqTokenParams, persistence = true)` | - |  |
 | share | evoke share action by generate share scheme-url | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
