--- a/packages/sdk/docs/3.zh-CN.md
+++ b/packages/sdk/docs/3.zh-CN.md
@@ -73,7 +73,7 @@ App的版本号
 | requestToken | 用code换取token | `function(params?: ReqTokenParams, persistence = true)` | - |  |
 | payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): { url?: string, params: PARAMS_PAYMENT } \| undefined` | - |  |
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.30.0` |
-| popup | 通过生成 scheme-url 来唤起用户/机器人的主页 | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
+| popup | 通过生成 scheme-url 来唤起用户/机器人的主页 | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - | `0.29.0(bot)` |
 | share | 通过生成 scheme-url 来唤起App内分享 | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
 | showToast | 调用原生的消息弹窗 | `function(msg: string)` | - | `Android Only` |
 | snapshot | 通过生成 scheme-url 来唤起转账详情 | `function(params: PARAMS_SNAPSHOTS): string \| undefined` | - |  |
