feat: add supportAPIs

--- a/packages/sdk/docs/3.md
+++ b/packages/sdk/docs/3.md
@@ -7,7 +7,9 @@
 | code | get the code which be used to get access-token | `string` | `undefined` |  |
 | codeVerifier | get the code-verifier which be used to get access-token | `string` | `undefined` |  |
 | conversationId | the conversation id | `string` | `undefined` |  |
+| isReborn | judgement whether or not in reborn app | `boolean` | - |  |
 | isMixin | judgement whether or not in mixin or reborn app | `boolean` | - |  |
+| supportAPIs | supported api map according to mixin or reborn app version | `SUPPORT_APIS` | `SUPPORT_APIS` |  |
 | token | get mixin access-token | `string` | `undefined` |  |
 | version | the app version | `string` | `undefined` |  |
 
@@ -35,12 +37,57 @@ the conversation id that actually could access in context
   console.info(bridge.conversationId); // 51e0e886-fba7-3732-804f-2686e5bb459e
   ```
 
+### isReborn
+judgement whether or not in reborn app
+
+- example
+  ```typescript
+  console.info(bridge.isReborn); // false
+  ```
+
 ### isMixin
 judgement whether or not in mixin or reborn app
 
 - example
   ```typescript
   console.info(bridge.isMixin); // true
+  ```
+
+### supportAPIs
+supported api map according to mixin or reborn app version
+
+- types
+  ```typescript
+  interface SUPPORT_APIS {
+    address_add: boolean; // corresponding to address('add', …)
+    address_del: boolean; // corresponding to address('del', …)
+    conversation: boolean;
+    getContext: boolean;
+    getUserInfo: boolean;
+    login: boolean;
+    logout: boolean;
+    payment: boolean;
+    playlist: boolean;
+    popup_user: boolean; // corresponding to popup('user', …)
+    popup_bot: boolean; // corresponding to popup('bot', …)
+    reloadTheme: boolean;
+    requestToken: boolean;
+    share_text: boolean; // corresponding to share('text', …)
+    share_image: boolean; // corresponding to share('image', …)
+    share_contact: boolean; // corresponding to share('contact', …)
+    share_app_card: boolean; // corresponding to share('app_card', …)
+    share_live: boolean; // corresponding to share('live', …)
+    share_post: boolean;
+    showToast: boolean;
+    snapshot: boolean;
+    transfer: boolean;
+    withdrawal: boolean;
+  };
+  ```
+
+- example
+  ```typescript
+  console.info(bridge.supportAPIs.playlist); // true
   ```
 
 ### token
@@ -111,7 +158,7 @@ evoke withdrawal-address action by generate address *scheme-url*
   ```
 
 ### conversation
-evoke conversation checkout by generate conversations *scheme-url*
+evoke conversation checkout by generate conversations *scheme-url*, *version >= `0.31.1`*
 
 - types
   ```typescript
@@ -121,7 +168,7 @@ evoke conversation checkout by generate conversations *scheme-url*
 
 - example
   ```typescript
-  bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e');
+  bridge.supportAPIs.conversation ? bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e') : window.open('……');
   ```
 
 ### getContext
@@ -222,7 +269,7 @@ evoke payment checkout by generate pay *scheme-url*
   ```
 
 ### playlist
-Play audio(s) by mixin native player
+Play audio(s) by mixin native player, *version >= `0.30.0`*
 
 - types
   ```typescript
@@ -232,15 +279,15 @@ Play audio(s) by mixin native player
 
 - example
   ```typescript
-  bridge.playlist([
+  bridge.supportAPIs.playlist ? bridge.playlist([
     'https://audio.1.mp3',
     'https://audio.2.mp3',
     'https://audio.3s.mp3',
-  ]);
+  ]) : new Audio();
   ```
 
 ### popup
-evoke user or bot's popup by generate *scheme-url*
+evoke user or bot's popup by generate *scheme-url*, *version >= `0.29.0`(bot)*
 
 - types
   ```typescript
@@ -256,7 +303,12 @@ evoke user or bot's popup by generate *scheme-url*
 
 - example
   ```typescript
-  bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
+  bridge.supportAPIs.popup_bot
+    ? bridge.popup('bot', {
+        app_id: 'a753e0eb-1111-2222-3333-a7bda9993f62'
+        params: 'some params'
+      })
+    : bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
 
 ### reloadTheme
