--- a/packages/sdk/docs/3.zh-CN.md
+++ b/packages/sdk/docs/3.zh-CN.md
@@ -7,7 +7,9 @@
 | code | code 通常用于获取 access-token | `string` | `undefined` |  |
 | codeVerifier | code-verifier 通常用于获取 access-token | `string` | `undefined` |  |
 | conversationId | 获取 conversation id | `string` | `undefined` |  |
+| isReborn | 判断是否在 reborn App 内 | `boolean` | - |  |
 | isMixin | 判断是否在 mixin 或者 reborn App 内 | `boolean` | - |  |
+| supportAPIs | 返回一个根据mixin或者reborn的版本，来判断支持的api映射表 | `SUPPORT_APIS` | `SUPPORT_APIS` |  |
 | token | 获取 access-token | `string` | `undefined` |  |
 | version | App的版本号 | `string` | `undefined` |  |
 
@@ -35,12 +37,57 @@ conversation id 实际上是通过 getContext 获取的
   console.info(bridge.conversationId); // 51e0e886-fba7-3732-804f-2686e5bb459e
   ```
 
+### isReborn
+判断是否在 reborn App 内
+
+- 使用示例
+  ```typescript
+  console.info(bridge.isReborn); // false
+  ```
+
 ### isMixin
 判断是否在 mixin 或者 reborn App 内
 
 - 使用示例
   ```typescript
   console.info(bridge.isMixin); // true
+  ```
+
+### supportAPIs
+返回一个根据mixin或者reborn的版本，来判断支持的api映射表
+
+- 参数类型
+  ```typescript
+  interface SUPPORT_APIS {
+    address_add: boolean; // 对应 address('add', …)
+    address_del: boolean; // 对应 address('del', …)
+    conversation: boolean;
+    getContext: boolean;
+    getUserInfo: boolean;
+    login: boolean;
+    logout: boolean;
+    payment: boolean;
+    playlist: boolean;
+    popup_user: boolean; // 对应 popup('user', …)
+    popup_bot: boolean; // 对应 popup('bot', …)
+    reloadTheme: boolean;
+    requestToken: boolean;
+    share_text: boolean; // 对应 share('text', …)
+    share_image: boolean; // 对应 share('image', …)
+    share_contact: boolean; // 对应 share('contact', …)
+    share_app_card: boolean; // 对应 share('app_card', …)
+    share_live: boolean; // 对应 share('live', …)
+    share_post: boolean;
+    showToast: boolean;
+    snapshot: boolean;
+    transfer: boolean;
+    withdrawal: boolean;
+  };
+  ```
+
+- 使用示例
+  ```typescript
+  console.info(bridge.supportAPIs.playlist); // true
   ```
 
 ### token
@@ -111,7 +158,7 @@ App的版本号
   ```
 
 ### conversation
-通过生成 *scheme-url* 来唤起对话
+通过生成 *scheme-url* 来唤起对话，*version >= `0.31.1`*
 
 - types
   ```typescript
@@ -121,7 +168,7 @@ App的版本号
 
 - example
   ```typescript
-  bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e');
+  bridge.supportAPIs.conversation ? bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e') : window.open('……');
   ```
 
 ### getContext
@@ -269,7 +316,7 @@ App的版本号
   ```
 
 ### playlist
-用原生播放器播放音频
+用原生播放器播放音频，*version >= `0.30.0`*
 
 - 参数类型
   ```typescript
@@ -279,15 +326,15 @@ App的版本号
 
 - 使用示例
   ```typescript
-  bridge.playlist([
+  bridge.supportAPIs.playlist ? bridge.playlist([
     'https://audio.1.mp3',
     'https://audio.2.mp3',
     'https://audio.3s.mp3',
-  ]);
+  ]) : new Audio();
   ```
 
 ### popup
-通过生成 *scheme-url* 来唤起用户/机器人的主页
+通过生成 *scheme-url* 来唤起用户/机器人的主页，*version >= `0.29.0`(机器人)*
 
 - 参数类型
   ```typescript
@@ -303,7 +350,12 @@ App的版本号
 
 - 使用示例
   ```typescript
-  bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
+  bridge.supportAPIs.popup_bot
+    ? bridge.popup('bot', {
+        app_id: 'a753e0eb-1111-2222-3333-a7bda9993f62'
+        params: 'some params'
+      })
+    : bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
 
 ### share
