update oauth base

--- a/packages/sdk/docs/3.zh-CN.md
+++ b/packages/sdk/docs/3.zh-CN.md
@@ -206,7 +206,7 @@ App的版本号
   };
 
   type LoginParams = {
-    oauth_url?: string; // oauth的 protocol + host，默认为 `https://mixin-oauth.firesbox.com`
+    oauth_url?: string; // oauth的 protocol + host，默认为 `https://mixin.one/oauth/authorize`
     client_id?: string; // client id，可在 mixin 开发者平台中获取
     redirect_url?: string; // 重定向 url
     state?: string; // oauth state
