--- a/packages/sdk/docs/3.md
+++ b/packages/sdk/docs/3.md
@@ -206,7 +206,7 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
   };
 
   type LoginParams = {
-    oauth_url?: string; // oauth address which contain protocol and host, default is `https://mixin-oauth.firesbox.com`
+    oauth_url?: string; // oauth address which contain protocol and host, default is `https://mixin.one/oauth/authorize`
     client_id?: string; // the client id which can be found at mixin developer platform
     redirect_url?: string; // redirect url
     state?: string; // oauth state
